Fix code block overflow

--- a/themes/goblindegook/src/css/_code.css
+++ b/themes/goblindegook/src/css/_code.css
@@ -28,7 +28,7 @@ pre {
   background-color: #272822;
   border-radius: 0.5rem;
   margin: 3rem 0;
-  overflow: scroll;
+  overflow: auto;
   padding: 1.5rem 1.5rem 0;
 
   @media (--narrow-viewport) {
